--- a/lib/package.json
+++ b/lib/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "angular": "^1.6.2",
+    "angular-ui-bootstrap": "^2.5.0",
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.1"
   }
