--- a/lib/package.json
+++ b/lib/package.json
@@ -2,9 +2,6 @@
   "name": "QuickGrade",
   "version": "0.1.0",
   "devDependencies": {
-    "angular-route": "^1.6.2",
-    "angularfire": "^2.3.0",
-    "firebase": "^3.6.9",
     "grunt": "~0.4.5",
     "grunt-browserify": "^5.0.0",
     "grunt-contrib-jshint": "^1.0.0",
@@ -20,6 +17,9 @@
     "angular": "^1.6.2",
     "angular-ui-bootstrap": "^2.5.0",
     "bootstrap": "^3.3.7",
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "angular-route": "^1.6.2",
+    "angularfire": "^2.3.0",
+    "firebase": "^3.6.9"
   }
 }
